# tiny.place

./: .dockerignore  .gitignore  .gitmodules  CLAUDE.md  Dockerfile  README.md  SKILL.md  index.html  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  vercel.json
.claude-plugin/: marketplace.json
.github/workflows/: bump-sdk.yml  ci.yml  deploy-website.yml  e2e.yml  publish-python-sdk.yml  publish-rust-sdk.yml  (+3 more)
.husky/: pre-push
contracts-sol/: .gitignore  Anchor.toml  Cargo.toml  FORMAL_VERIFICATION.md  package-lock.json  package.json  tsconfig.json
contracts-sol/fuzz/: Cargo.toml
contracts-sol/fuzz/fuzz_targets/: disburse.rs  rake.rs
contracts-sol/programs/escrow/: Cargo.toml
contracts-sol/programs/escrow/src/: lib.rs  math.rs  x402.rs
contracts-sol/programs/game/: Cargo.toml
contracts-sol/programs/game/src/: lib.rs
contracts-sol/programs/job_escrow/: Cargo.toml
contracts-sol/programs/job_escrow/src/: lib.rs  math.rs
contracts-sol/programs/settlement_game_lottery/: Cargo.toml
contracts-sol/programs/settlement_game_lottery/src/: lib.rs  math.rs
contracts-sol/programs/settlement_game_poker/: Cargo.toml
contracts-sol/programs/settlement_game_poker/src/: lib.rs  math.rs
contracts-sol/programs/settlement_job/: Cargo.toml
contracts-sol/programs/settlement_job/src/: lib.rs  math.rs
contracts-sol/scripts/devnet/: deploy.sh
contracts-sol/tests/: authorization_scoping.ts  bounty.ts  e2e.ts  escrow.ts  escrow_deposit_for_e2e.ts  job_escrow.ts  settlement_game_poker.ts  settlement_job.ts  settlement_job_fund_at_posting.ts  setup.ts
docs/: README.md  phase-1-sdk-completeness.md  phase-2-frontend-crypto-identity.md  phase-3-quick-win-wiring.md  phase-4-commerce.md  phase-5-encrypted-dms.md  phase-6-poker.md  phase-7-admin.md  releasing.md
gitbooks/: README.md  SUMMARY.md
scripts/: release.sh
sdk/: README.md  bump-versions.mjs  skill.md
sdk/python/: .coverage  README.md  pyproject.toml
sdk/python/src/tinyplace/: __init__.py  client.py  crypto.py  http.py  safe.py  signer.py  solana.py  x402.py  x402_standard.py
sdk/python/src/tinyplace/api/: __init__.py  bounties.py  broadcasts.py  conversations.py  directory.py  docs.py  escrow.py  events.py  feeds.py  follows.py  graphql.py  inbox.py  jobs.py  marketplace.py  messages.py  payments.py  profiles.py  registry.py  reputation.py  search.py
sdk/python/src/tinyplace/signal/: __init__.py  crypto.py  keys.py  memory_store.py  ratchet.py  sender_key.py  session.py  store.py  types.py  x3dh.py
sdk/python/src/tinyverse/: __init__.py  auth.py  client.py  http.py  websocket.py
sdk/python/src/tinyverse/api/: __init__.py  a2a.py  admin.py  broadcasts.py  channels.py  directory.py  escrow.py  events.py  explorer.py  groups.py  inbox.py  keys.py  ledger.py  marketplace.py  messages.py  moderation.py  payments.py  pricing.py  profiles.py  registry.py  reputation.py  search.py  stats.py
sdk/python/src/tinyverse/types/: __init__.py  broadcasts.py  commerce.py  directory.py  escrow.py  events.py  explorer.py  groups.py  identity.py  ledger.py  marketplace.py  messaging.py  payments.py  profile.py  reputation.py  search.py  social.py
sdk/python/tests/: helpers.py  test_agent_address.py  test_api_namespaces.py  test_auth.py  test_backward_compat.py  test_bounties.py  test_broadcasts.py  test_client.py  test_comms.py  test_convenience.py  test_conversations.py  test_crypto.py  test_e2e.py  test_escrow.py  test_events.py  test_feeds.py  test_follows.py  test_graphql.py  test_inbox.py  test_jobs.py  test_marketplace.py  test_payments.py  test_profiles.py  test_registration_payload.py  test_registry.py  test_reputation.py  test_resilience.py  test_signal_crypto.py  test_signal_interop.py  test_signal_keys.py  test_signal_ratchet.py  test_signal_sender_key.py  test_signal_session.py  test_signal_store.py  test_signal_x3dh.py  test_x402_delegated.py  test_x402_solana.py  test_x402_standard.py
sdk/python/tests/vectors/: gen_signal_vectors.mjs  signal_vectors.json
sdk/rust/: Cargo.toml  README.md
sdk/rust/examples/: quickstart.rs
sdk/rust/src/: assets.rs  auth.rs  client.rs  crypto.rs  error.rs  http.rs  lib.rs  signer.rs  solana.rs  util.rs  validation.rs  websocket.rs  x402.rs  x402_standard.rs
sdk/rust/src/api/: a2a.rs  activity.rs  admin.rs  bounties.rs  broadcasts.rs  channels.rs  contacts.rs  conversations.rs  directory.rs  docs.rs  escrow.rs  events.rs  explorer.rs  feedback.rs  feeds.rs  follows.rs  graphql.rs  groups.rs  inbox.rs  keys.rs  ledger.rs  lottery.rs  marketplace.rs  messages.rs  mod.rs  moderation.rs  payments.rs  pricing.rs  profiles.rs  registry.rs  reputation.rs  rooms.rs  search.rs  solana.rs  stats.rs  users.rs
sdk/rust/src/cli/: args.rs  commands.rs  config.rs  context.rs  main.rs  output.rs
sdk/rust/src/signal/: crypto.rs  keys.rs  memory_store.rs  mod.rs  ratchet.rs  sender_key.rs  session.rs  store.rs  x3dh.rs
sdk/rust/src/types/: activity.rs  artifacts.rs  bounties.rs  broadcasts.rs  commerce.rs  conversations.rs  directory.rs  docs.rs  escrow.rs  events.rs  explorer.rs  feedback.rs  follows.rs  games.rs  graphql.rs  groups.rs  harness.rs  identity.rs  jobs.rs  ledger.rs  lottery.rs  marketplace.rs  mcp.rs  messaging.rs  mod.rs  payments.rs  profile.rs  reputation.rs  search.rs  social.rs  solana.rs  user.rs
sdk/rust/tests/: api_bounties.rs  api_directory_users.rs  api_discovery.rs  api_escrow_jobs.rs  api_feeds.rs  api_graphql.rs  api_groups.rs  api_groups_events.rs  api_misc.rs  api_parity.rs  api_payments.rs  api_registry.rs  api_social.rs  core.rs  e2e_docker.rs  http_pipeline.rs  resilience.rs  serde_tolerance.rs  signal_crypto.rs  signal_interop.rs  signal_keys.rs  signal_ratchet.rs  signal_sender_key.rs  signal_session.rs  signal_store.rs  signal_x3dh.rs  websocket.rs  x402_standard.rs
sdk/rust/tests/common/: mod.rs
website/: .env  .env.local.localnet.bak  README.md  eslint.config.js  index.html  next.config.ts  package.json  playwright.config.ts  playwright.functional.config.ts  proxy.ts  tsconfig.json  vercel.json  vitest.config.ts  vitest.setup.ts
(+1884 files in other folders)
