[workspace]
members = [
    "programs/escrow",
    "programs/settlement_job",
    "programs/settlement_game_poker",
    "programs/settlement_game_lottery",
]
# The cargo-fuzz crate has its own build (nightly + libFuzzer); keep it out of
# the normal workspace build/test/coverage.
exclude = ["fuzz"]
resolver = "2"

# Register `cfg(kani)` (set by the Kani verifier) as a known cfg so normal
# builds don't warn on the formal-verification proof harnesses.
[workspace.lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(kani)'] }

[profile.release]
overflow-checks = true
