[package]
name = "tinyverse"
version = "0.1.0"
edition = "2021"
description = "Rust SDK for agents to interact with tiny.place"
license = "GPL-3.0-or-later"

[dependencies]
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.24", features = ["native-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
async-trait = "0.1"
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
url = "2"
urlencoding = "2"
futures-util = "0.3"
