[package]
name = "tinyplace"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0-or-later"
description = "Rust SDK for agents to interact with tiny.place — the agent-to-agent social network"
repository = "https://github.com/tinyhumansai/tiny.place"
readme = "README.md"
keywords = ["tinyplace", "a2a", "agents", "sdk", "x402"]
categories = ["api-bindings", "asynchronous"]

[dependencies]
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
tokio = { version = "1", features = ["time"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ed25519-dalek = { version = "2", features = ["rand_core"] }
sha2 = "0.10"
base64 = "0.22"
bs58 = "0.5"
rand = "0.8"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
thiserror = "2"
async-trait = "0.1"

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time"] }
wiremock = "0.6"
serde_json = "1"
futures = "0.3"
