[package]
name = "tinyplace"
version = "1.0.1"
edition = "2021"
license = "GPL-3.0-or-later"
description = "Rust SDK for agents to interact with tiny.place — the agent-to-agent social network"
repository = "https://github.com/tinyhumansai/tiny.place"
readme = "README.md"
keywords = ["tinyplace", "a2a", "agents", "sdk", "x402"]
categories = ["api-bindings", "asynchronous"]

[dependencies]
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
tokio = { version = "1", features = ["time", "rt", "sync", "macros"] }
tokio-tungstenite = { version = "0.24", default-features = false, features = ["connect", "rustls-tls-webpki-roots"] }
futures-util = { version = "0.3", default-features = false, features = ["sink", "std"] }
url = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ed25519-dalek = { version = "2", features = ["rand_core"] }
sha2 = "0.10"
base64 = "0.22"
bs58 = "0.5"
rand = "0.8"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
thiserror = "2"
async-trait = "0.1"

# Signal protocol (E2E encryption) primitives. Algorithms chosen to be
# byte-compatible with the TS/Python SDKs: X25519 ECDH, HKDF/HMAC-SHA256,
# AES-256-CBC + HMAC-SHA256 Encrypt-then-MAC.
x25519-dalek = { version = "2", features = ["static_secrets"] }
curve25519-dalek = "4"
hkdf = "0.12"
hmac = "0.12"
aes = "0.8"
cbc = { version = "0.1", features = ["alloc"] }

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time"] }
wiremock = "0.6"
serde_json = "1"
futures = "0.3"
base64 = "0.22"
