[package]
name = "job_escrow"
version = "0.1.0"
description = "tiny.place job escrow Anchor program"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "job_escrow"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = "1.0.2"
anchor-spl = "1.0.2"
solana-security-txt = "1.1.1"

[lints]
workspace = true
