[package]
name = "settlement_game_poker"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "settlement_game_poker"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build", "escrow/idl-build"]

[dependencies]
anchor-lang = "1.0.2"
anchor-spl = "1.0.2"
escrow = { path = "../escrow", features = ["cpi"] }

[lints]
workspace = true
